--- a/templates/create.html
+++ b/templates/create.html
@@ -10,7 +10,7 @@
         <header class="navbar">
             <div class="brand">
                 <img src="/static/logo.svg" alt="The Weekend Logo" class="logo">
-                WeekEnd
+                <img src="/static/WeekEnd-Text.png" alt="The Weekend Logo Text" class="logo_text">
             </div>
             <ul class="navbar__navigation">
                 <li class="navbar__navigation-item">
