highlight current page in navbar

--- a/templates/create.html
+++ b/templates/create.html
@@ -17,7 +17,7 @@
                     <a href="#" class="navbar__link">Predict</a>
                 </li>
                 <li class="navbar__navigation-item">
-                    <a href="#" class="navbar__link">Add Data</a>
+                    <a href="#" class="navbar__link navbar__link__active">Add Data</a>
                 </li>
                 <li class="navbar__navigation-item">
                     <a href="#" class="navbar__link">About</a>
