--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -14,13 +14,13 @@
             </div>
             <ul class="navbar__navigation">
                 <li class="navbar__navigation-item">
-                    <a href="#" class="navbar__link navbar__link__active">Recommend</a>
+                    <a href="/" class="navbar__link navbar__link__active">Recommend</a>
                 </li>
                 <li class="navbar__navigation-item">
-                    <a href="#" class="navbar__link">Add Data</a>
+                    <a href="/create" class="navbar__link">Add Data</a>
                 </li>
                 <li class="navbar__navigation-item">
-                    <a href="#" class="navbar__link">About</a>
+                    <a href="/about" class="navbar__link">About</a>
                 </li>
             </ul>
         </header>
