--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -105,3 +105,7 @@ body {
     white-space: pre-wrap;
     word-wrap: break-word; /* Ensures that long strings/words will break and wrap onto the next line */
 }
+
+.about__text {
+    padding: 20px;
+}
