--- a/templates/base.html
+++ b/templates/base.html
@@ -19,15 +19,37 @@
                     <a href="{{ url_for('recommend') }}" class="navbar__link">Recommend</a>
                 </li>
                 <li class="navbar__navigation-item">
-                    <a href="{{ url_for('create_interest') }}" class="navbar__link">Add Data</a>
+                    <a href="{{ url_for('create_interest') }}" class="navbar__link">Interests</a>
                 </li>
                 <li class="navbar__navigation-item">
                     <a href="{{ url_for('info') }}" class="navbar__link">About</a>
+                </li>
+                <li class="navbar__navigation-item">
+                    <a href="{{ url_for('profile') }}" class="navbar__link">Profile</a>
+                </li>
+                <li class="navbar__navigation-item">
+                    <a href="{{ url_for('login') }}" class="navbar__link">Login</a>
+                </li>
+                <li class="navbar__navigation-item">
+                    <a href="{{ url_for('sign_up') }}" class="navbar__link">Register</a>
+                </li>
+                <li class="navbar__navigation-item">
+                    <a href="{{ url_for('logout') }}" class="navbar__link">Logout</a>
                 </li>
             </ul>
         </header>
 
         <main class="main">
+            {% with messages = get_flashed_messages() %}
+              {% if messages %}
+                <ul class=flashes>
+                {% for message in messages %}
+                  <li>{{ message }}</li>
+                {% endfor %}
+                </ul>
+              {% endif %}
+            {% endwith %}
+
             {% block content %}
             {% endblock %}
         </main>
