add ability to specify city for recommendation

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
             </div>
             <ul class="navbar__navigation">
                 <li class="navbar__navigation-item"> 
-                    <a href="{{ url_for('recommend') }}" class="navbar__link">Recommend</a>
+                    <a href="{{ url_for('create_recommendation') }}" class="navbar__link">Recommend</a>
                 </li>
                 <li class="navbar__navigation-item">
                     <a href="{{ url_for('create_interest') }}" class="navbar__link">Interests</a>
