--- a/templates/get_recommendation.html
+++ b/templates/get_recommendation.html
@@ -6,6 +6,8 @@
     <form action="/show-recommendation" method="POST" class="form">
         <label for="city" class="form__label">Specify the City you live in:</label>
         <input name="city" id="city_input" class="recommend__form__input">
+        <label for="additional-info" class="form__label">Any other preference:</label>
+        <textarea name="additional-info" id="additional_info_input" class="form__recommendation__textarea"></textarea>
         <button type="submit" class="form__button">Get Recommendation</button> 
     </form>
 </div>
