--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -123,3 +123,31 @@ body {
 .recommend__form__input {
     margin-top: 8px;
 }
+
+.login__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.login__form__input {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
+.login__form__label {
+    margin-bottom: 8px;
+}
+
+.login__form__button {
+    padding: 10px;
+    background-color: #323f43;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
