--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class>
+<div class="login__content">
     <h1> Login </h1>
     <form action="/login" method="POST" class="form">
-        <label for="username" class="form__label">username</label>
+        <label for="username" class="login__form__label">Username</label>
         <input name="username" id="username_input" class="login__form__input">
-        <button type="submit" class="form__button">Login</button> 
+        <button type="submit" class="login__form__button">Login</button> 
         {% if user_not_found %}
             <p style="color: red;">User not registered!</p>
         {% endif %}
