--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div>
-    This is your profile page {{ username }}.
+<div class="user_profile__container">
+    <h1>User Info</h1>
+    <b>Username: </b>{{ username }}
 </div>
 {% endblock %}
